Close #2 Opens #21 #14 Update get activities by username

--- a/cloudformation/xpenses_dynamoDB_dev.yaml
+++ b/cloudformation/xpenses_dynamoDB_dev.yaml
@@ -5,10 +5,10 @@ Resources:
     Type: "AWS::DynamoDB::Table"
     Properties:
       AttributeDefinitions:
-        - AttributeName: "Id"
+        - AttributeName: "Name"
           AttributeType: "S"
       KeySchema:
-        - AttributeName: "Id"
+        - AttributeName: "Name"
           KeyType: "HASH"
       TableName: "dev.users"
       ProvisionedThroughput:
