#42 Rename restricted field name to activityName, expenseName, username

--- a/cloudformation/xpenses_dynamoDB_prod.yaml
+++ b/cloudformation/xpenses_dynamoDB_prod.yaml
@@ -5,10 +5,10 @@ Resources:
     Type: "AWS::DynamoDB::Table"
     Properties:
       AttributeDefinitions:
-        - AttributeName: "name"
+        - AttributeName: "username"
           AttributeType: "S"
       KeySchema:
-        - AttributeName: "name"
+        - AttributeName: "username"
           KeyType: "HASH"
       TableName: "prod.users"
       ProvisionedThroughput:
